# university-course-planning-intelligence-system

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: python-checks.yml
configs/: synthetic_lab.yaml
data/: README.md
docs/: advising_policy.md  methodology.md  report_template.md  synthetic_lab.md
matlab/: plot_course_planning_metrics.m
notebooks/: README.md
scripts/: run_synthetic_course_lab.py
src/courseplan/: __init__.py  audit.py  config.py  fairness.py  planner.py  prerequisites.py  reporting.py  risk.py  synthetic.py  visualization.py
tests/: test_audit.py  test_pipeline.py  test_planning.py  test_synthetic.py
