[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "university-course-planning-intelligence-system"
version = "0.1.0"
description = "Synthetic university course planning intelligence system with prerequisites, capacity, professor availability, graduation risk, and advisor reports."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "MIT"}
authors = [{name = "Hirakhyzer"}]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
